<resources>
    <string name="app_name">eCommerceMobile</string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="forgot_pass_underline"><u>Forgot password?</u></string>
    <string name="update_profile">Update Profile</string>
    <string name="remove">Remove</string>
    <string name="euro">€</string>
    <string name="log_out">Log Out</string>
    <string name="cancelCaps">CANCEL</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_center">Help Center</string>
    <string name="notifications">Notifications</string>
    <string name="date_ordered">Date Ordered: </string>
    <string name="total">Total</string>
    <string name="state">State</string>
    <string name="total_price">Total price</string>
    <string name="order_detail">Order detail</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="product_placeholder">Product placeholder</string>
    <string name="price_placeholder">Price placeholder</string>
    <string name="checkout">Checkout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log Out?</string>
    <string name="nickname">Nickname</string>
    <string name="logo_from_company">Logo from company</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="no_tiene_cuenta">¿No tiene cuenta?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="image_from_product">Image from product</string>
    <string name="_0_99">0.99€</string>
    <string name="month">/month</string>
    <string name="barcelona_spain">Barcelona, Spain</string>
    <string name="_4_9">4.9</string>
    <string name="icon_from_location">icon from location</string>
    <string name="star_from_rating">Star from rating</string>
    <string name="coal">Coal</string>
    <string name="minecraft_server">Minecraft Server</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="features">Features</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="search_hint">Search ...</string>
    <string name="filter">Filter</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See all</string>
    <string name="popular">Popular</string>
    <string name="location">Location</string>
    <string name="buscar">Search</string>
    <string name="paypal_amplitude_dev_key">dev key</string>
    <string name="paypal_amplitude_prod_key">prod key</string>
    <string name="paypal_checkout_user_agreement_cta_pay_now">checkout user agreement </string>
    <string name="paypal_overcapture_expanded_details_long_text">overcapture </string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in">Log In</string>
    <string name="i5_8500">I5-8500</string>
    <string name="_10gb">10GB</string>
    <string name="_2gb">2GB</string>
    <string name="ssd_storage">• SSD Storage: </string>
    <string name="ram">• RAM: </string>
    <string name="disco">• DISCO: </string>
    <string name="cpu">• CPU: </string>
    <string name="ddos_protection">• DDoS Protection: </string>
    <string name="players">• Players: </string>
    <string name="_3_6">3-6</string>
    <string name="products_related">Products Related</string>
    <string name="true_string">True</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>