<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:background="#DCDCDC"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:padding="4sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4sp">

                <ImageView
                    android:id="@+id/productIV"
                    android:layout_width="120sp"
                    android:layout_height="120sp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_from_product"
                    android:foregroundGravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:layout_margin="4sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/categoryTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minecraft_server"
                    android:textColor="@color/vhost_orange"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4sp"
                    android:text="@string/coal"
                    android:textColor="@color/vhost_orangeDarker"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/category_popular" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:padding="2sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <TextView
                        android:id="@+id/priceTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_99"
                        android:textColor="@color/vhost_orange"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price_expirationTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/grayMate"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <!--
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="75sp"
                android:layout_marginTop="4sp"
                android:layout_marginEnd="4sp">

                <ImageView
                    android:layout_width="14sp"
                    android:layout_height="14sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2sp"
                    android:contentDescription="@string/star_from_rating"
                    android:src="@drawable/ic_star_rounded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_4_9"
                    android:textSize="11sp" />

            </LinearLayout>
            -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToCartBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/vhost_orange"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="12sp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/descriptionCHIP"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:clickable="true"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/vhost_orange" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ratingCHIP"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:checkable="false"
                android:clickable="true"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:chipBackgroundColor="@color/vhost_orange" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:text="@string/features"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/cpu"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cpu_valueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i5_8500" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/disco"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/disk_valueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10gb" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/ram"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ram_valueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2gb" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/ssd_storage"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/ssd_storageTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_string" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/ddos_protection"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/ddos_protectionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/true_string"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7sp"
                    android:text="@string/players"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/players_valueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_6" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/products_related"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_recommended"
            android:layout_width="match_parent"
            android:layout_height="165sp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_title_recommended"
            tools:listitem="@layout/recommended_item" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />



</androidx.constraintlayout.widget.ConstraintLayout>